--- a/ruby/.vscode/launch.json
+++ b/ruby/.vscode/launch.json
@@ -8,7 +8,8 @@
             "name": "Debug Local File",
             "type": "Ruby",
             "request": "launch",
-            "program": "${workspaceRoot}/main.rb"
-        }
+            "cwd": "${workspaceRoot}",
+            "program": "${file}"
+       }
     ]
 }
